welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:1: error: Missing closing brace `}' assumed here
def makes10(a:Int, b:Int):Boolean =
^